package com.zergatstage.hw02.Model;

import java.util.List;
import java.util.UUID;

public class CreditHistory {
    private UUID clientId;
    private List<Loan> loans;
}
