package com.zergatstage.hw02.Model;

public enum LoanType {
    LOAN,
    CREDIT_CARD,
    LEND,
    LEASING
}
